# VBACommitPush

./: .gitignore  .pre-commit-config.yaml  AxisVariables_Excel.txt  BearingArticulation4_Excel.txt  BearingArticulation_Excel.txt  CODEOWNERS  CrossSection_Excel.txt  CrossSection_JSON_FullDataa.txt  CrossSection_JSON_FullDataaaa.txt  CrossSection_Points_Excel.txt  CrossSection_Variables_Excel.txt  DeckObject_AxisVariables_Excel.txt  DeckObject_Excel.txt  DeckObject_InternalStations_Excel.txt  MainStation_Excel.txt  README.md  SPOT_Filters.py  normalize_paths.py  pyproject.toml  setup.py  spotviso  spotviso.py
.github/: dependabot.yml
.github/workflows/: validate-agent-pr.yml
artifacts/: case_case_with_special_chars_123!.html  case_test123.html  synthetic_case.html
models/: __init__.py  axis.py  cross_section.py
scripts/: bench_embed.py
spot/: __init__.py  cli.py  context.py  data.py  embedding.py  loaders.py  logging.py
spot/app/: __init__.py  cli.py
spot/vis/: __init__.py  plotter.py
spotviso/: __init__.py  cli.py
spotviso.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/vbacommitpush/: axis_frame.py  cross_section.py
tests/: __init__.py  conftest.py  test_axis.py  test_bug_world_symmetric.py  test_cross_section.py  test_golden_outputs.py  test_smoke.py
tests/golden_outputs/: axis_frames.json  basic_embedding_Pyl_CSB.json  transformation_consistency_Pyl_CSB.json  world_symmetric_embedding_Pyl_CSB.json
tests/smoke/: __init__.py  (+3 more)
vbacommitpush/: __init__.py  main.py  spotviso.py
vbacommitpush.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
