[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotviso"
version = "0.1.0"
description = "SpotViso CLI for data validation and visualization"
authors = [{name = "SpotViso Team"}]
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "pathlib",
]

[project.scripts]
spotviso = "spotviso.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spotviso*"]