[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vba-commit-push"
version = "0.1.0"
description = "VBA Commit Push project with smoke tests"
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0",
    "numpy>=1.20.0",
]

[project.scripts]
spotviso = "spotviso:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: marks tests as smoke tests (fast, <60s)",
]